--- a/src/view/ModifyAppointment.fxml
+++ b/src/view/ModifyAppointment.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -65,14 +64,12 @@
                         <TextField fx:id="appointment_id_textfield" disable="true" GridPane.columnIndex="1" />
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="5">
                            <children>
-                              <Spinner fx:id="start_hour_spinner" prefHeight="26.0" prefWidth="69.0" />
-                              <Spinner fx:id="start_minute_spinner" prefHeight="26.0" prefWidth="69.0" />
+                              <ComboBox fx:id="start_combo" prefWidth="150.0" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="6">
                            <children>
-                              <Spinner fx:id="end_hour_spinner" prefHeight="26.0" prefWidth="69.0" />
-                              <Spinner fx:id="end_minute_spinner" prefHeight="26.0" prefWidth="69.0" />
+                              <ComboBox fx:id="end_combo" prefWidth="150.0" />
                            </children>
                         </HBox>
                             </children>
